<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tes Buta Warna</string>
    <string name="page">Halaman %s</string>
    <string name="plate_fourteen">14 Pelat</string>
    <string name="plate_twenty_four">24 Pelat</string>
    <string name="plate_thirty_eight">38 Pelat</string>
    <string name="tes_selesai">Anda telah menyelesaikan\nTes buta warna metode Ishihara</string>
    <string name="my_name">Hi, %s</string>
    <string name="tes_buta_warna_value">Tes buta warna (%s)</string>
    <string name="selected">Pilihan %s</string>
    <string name="jawaban_anda_value">Jawaban </string>
    <string name="text_for_essay">Angka berapa ini?</string>
    <string name="hint_essay">Jawab</string>
    <string name="text_for_multiple_choice">Ikuti warna %s pada plate, cocokan dengan gambar yang ada dibawah.</string>
    <string name="text_for_multiple_choice_line">"Ikuti garis dari X ke X pada pelat, cocokan dengan gambar yang ada dibawah"</string>
    <string name="color_green">Hijau</string>
    <string name="color_red_or_purple">Merah/Ungu</string>
    <string name="color_red">Merah</string>
    <string name="color_orange">Orange</string>
    <string name="what_is_ishihara_test">Tes Ishihara adalah tes yang dilakukan untuk memeriksa kemampuan mata dalam melihat dan membedakan warna. Tes ini paling sering digunakan untuk mendeteksi buta warna, baik itu buta warna total maupun parsial. \n Tes Ishihara dapat digunakan untuk mengetahui apakah seseorang menderita buta warna. Tes buta warna ini dapat dilakukan di rumah sakit oleh dokter mata atau dilakukan sendiri di rumah.\nMeski dapat dilakukan secara mandiri, jika hasil pemeriksaan di rumah menunjukkan adanya kondisi buta warna, disarankan untuk segera melakukan pemeriksaan ke dokter guna memastikan diagnosis.</string>
    <string name="ishihara_pengantar">"Seri pelat ini dirancang untuk memberikan tes yang memberikan penilaian cepat dan akurat tentang defisiensi penglihatan warna yang berasal dari kongenital. Ini adalah bentuk paling umum dari gangguan penglihatan warna. Sebagian besar kasus defisiensi penglihatan warna bawaan ditandai dengan defisiensi merah-hijau yang mungkin terdiri dari dua jenis; pertama, jenis protan yang mungkin lengkap (protanopia) atau sebagian (protanomalia), dan kedua, jenis deutan yang mungkin lengkap (deuteranopia) atau sebagian (duteranomalia). Dalam protanopia rentang spektrum yang terlihat lebih pendek pada akhirnya dibandingkan dengan spektrum normal, dan bagian spektrum yang tampak normal sebagai biru-hijau, tampak bagi mereka yang protanopia sebagai abu-abu. Seluruh rentang spektrum yang terlihat dalam protanopia terdiri dari dua area yang dipisahkan satu sama lain oleh bagian abu-abu ini. Setiap area tampak bagi mereka yang memiliki protanopia sebagai satu sistem warna dengan kecerahan dan saturasi yang berbeda di setiap area, warna di satu area berbeda dari area lainnya. Warna merah dengan sedikit semburat ungu yang merupakan warna komplementer dari biru-hijau muncul juga sebagai abu-abu. Pada deuteranopia, bagian spektrum yang tampak normal sebagai hijau, tampak abu-abu, dan rentang spektrum yang terlihat dibagi oleh zona ini menjadi dua area, yang masing-masing tampak sebagai satu sistem warna. Rentang spektrum yang terlihat tidak berkontraksi, berbeda dengan protanopia. Ungu merah yang merupakan warna pelengkap hijau muncul juga sebagai abu-abu. Pada protanomalia dan deuteranomalia, tidak ada bagian dari spektrum yang tampak abu-abu. Tetapi bagian spektrum yang tampak bagi penderita protanopia sebagai abu-abu, tampak bagi penderita protanomalia sebagai warna samar keabu-abuan, dan demikian pula, bagian abu-abu dari spektrum yang terlihat oleh penderita deuteranopia tampak bagi penderita deuteranomalia sebagai warna tidak jelas. menjadi abu-abu. Akibatnya, salah satu kekhasan defisiensi merah-hijau adalah bahwa warna biru dan kuning tampak sangat jelas dibandingkan dengan warna merah dan hijau. Penerapan kekhasan ini untuk tes defisiensi penglihatan warna adalah fitur pembeda dari seri ini. Pada defisiensi penglihatan warna bawaan, meskipun sangat jarang, ada kelemahan warna total. Sensitivitas warna dari kelemahan warna total terhadap merah dan hijau, serta kuning dan biru sangat rendah dan hanya warna bening yang dapat dirasakan; tetapi, kecuali untuk sensitivitas warna, tidak ada kelainan pada fungsi visual. Pelat dalam buku ini merupakan metode yang mudah untuk menegakkan diagnosis pada kasus-kasus seperti itu dan dalam membedakannya dari kasus defisiensi merah-hijau. Ada juga kelompok yang sangat jarang dari orang-orang yang menderita buta warna total dan menunjukkan kegagalan total untuk membedakan setiap variasi warna, biasanya dengan gangguan penglihatan sentral yang terkait dengan fotofobia dan nistagmus. Selanjutnya, kegagalan dalam apresiasi biru dan kuning dapat disebut tyritanomalia jika parsial, dan tritanopia jika lengkap, tetapi, bahkan jika kasus tersebut memang ada, mereka sangat jarang. Pelat dalam buku ini tidak dirancang untuk diagnosis kasus seperti itu."</string>
    <string name="ishihara_how_to_test">Pelat dirancang untuk digunakan di ruangan yang cukup terang di siang hari. Adanya sinar matahari langsung atau penggunaan lampu listrik dapat menyebabkan perbedaan srome pada hasil uji karena perubahan tampilan nuansa warna. Pada saat hanya menggunakan lampu listrik, harus disesuaikan sejauh mungkin agar menyerupai efek cahaya matahari alami. Pelat dipegang 75 cm dari subjek dan disesuaikan sehingga bidang kertas tegak lurus terhadap garis pandang. Angka-angka yang terlihat pada pelat disebut, dan setiap jawaban harus diberikan tanpa penundaan lebih dari tiga detik.\nPenggunaan rangkaian pelat tidak perlu digunakan semuanya. Pelat 12, 13 dan 14 dapat dihilangkan jika hanya digunakan untuk membedakan apresiasi warna normal.</string>
    <string name="plate_fourteen_description">No. 1. Setiap subyek, baik dengan penglihatan warna normal atau cacat akan membaca angka \"12\" dengan benar. Pelat ini digunakan terutama untuk penjelasan awal dari proses tes untuk subyek.\nNo. 2. Subyek normal akan membaca \"8\" dan mereka yang memiliki defisiensi merah–hijau akan membaca angka \"3\".\nNo. 3. Subyek normal akan membaca \"5\" dan subyek dengan defisiensi warna merah–hijau akan membaca angka  \"2\".\nNo. 4. Subyek normal akan membaca \"29\" dan subyek dengan defisiensi warna merah–hijau akan membaca angka \"70\"\nNo. 5. Subyek normal akan membaca \"74\" dan subyek dengan defisiensi merah–hijau akan membaca angka \"21\"\nNo. 6–7. Dapat diuraikan dengan benar oleh subjek normal, tetapi tidak terbaca atau sulit dibaca bagi mereka yang memiliki defisiensi merah-hijau.\nNo. 8. Jelas terbaca angka \"2\" untuk subjek normal tetapi tidak jelas bagi mereka yang memiliki defisiensi merah-hijau. \nNo. 9. Subyek normal hampir tidak bisa membacanya, tetapi kebanyakan dari mereka yang kekurangan merah-hijau melihat angka \"2\".\nNo. 10. Subyek normal biasanya dapat membaca angka \"16\", tetapi kebanyakan dari mereka yang kekurangan warna merah-hijau tidak bisa membacanya.\nNo. 11. Dalam menelusuri garis berkelok-kelok antara dua x, subyek normal menelusuri garis hijau kebiruan, tetapi sebagian besar dari subyek dengan gangguan penglihatan warna tidak dapat mengikuti garis atau mengikuti garis yang berbeda dari yang normal.\nNo. 12. Subyek normal dan subyek dengan defisiensi warna merah-hijau ringan melihat angka \"35\" tetapi protanopia dan protanomalia parah hanya akan membaca angka \"5\", dan deuteranopia dan deuteranomalia parah hanya membaca angka \"3\" saja.\nNo. 13. Subyek normal dan subyek dengan defisiensi warna merah-hijau ringan melihat angka \"96\" tetapi protanopia dan protanomalia parah hanya akan membaca angka \"6\", dan deuteranopia dan deuteranomalia parah hanya membaca angka \"9\" saja.\nNo. 14. Dalam menelusuri garis berkelok  antara dua S, subyek normal menyusuri sepanjang garis ungu dan garis merah.\nPada protanopia dan protanomalia parah hanya garis ungu yang ditelusuri dan dalam kasus protanomalia ringan kedua garis ditelusuri tetapi garis ungu lebih mudah diikuti.\nPada deueranopia dan deuteranomalia hanya garis merah yang ditelusuri dan dalam kasus Df deuteramnalia ringan kedua garis ditelusuri tetapi garis merah lebih mudah diikuti</string>
    <string name="next_page">Halaman Selanjutnya</string>
    <string name="test_quiz">Soal Tes</string>
    <string name="back_to_quiz">Kembali ke soal</string>
    <string name="normal">Normal</string>
    <string name="partial_color_blind">Buta Warna Parsial</string>
    <string name="total_color_blind">Buta Warna Total</string>
</resources>