<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nbold"
        android:text="@string/normal"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ProgressBar
            android:id="@+id/normal_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circle_progress_bar"
            android:rotation="-90" />

        <TextView
            android:id="@+id/tv_normal_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nsemibold"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="60%" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nbold"
        android:text="@string/partial_color_blind"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ProgressBar
            android:id="@+id/partial_color_blind_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circle_progress_bar"
            android:rotation="-90" />

        <TextView
            android:id="@+id/tv_partial_color_blind_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nsemibold"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="30%" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nbold"
        android:text="@string/total_color_blind"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ProgressBar
            android:id="@+id/total_color_blind_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circle_progress_bar"
            android:rotation="-90" />

        <TextView
            android:id="@+id/tv_total_color_blind_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nsemibold"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="10%" />

    </FrameLayout>

</LinearLayout>